[package]
name = "leetcode"
version = "0.1.0"
authors = ["gozssky"]
edition = "2018"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
anyhow = "1.0"
graphql_client = { version="0.11",features = ["reqwest-blocking"]}
reqwest = { version = "0.11", features = ["json", "blocking"] }
