[package]
name = "leetcode"
version = "0.1.0"
authors = ["gozssky"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.4"
graphql_client = { version = "0.11", features = ["reqwest-blocking"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
